# SportBuddy/SportBuddy/App/Resources/Generated/OpenAPIs/Models/GroupDTO.swift
@@ -1,48 +1,0 @@
-//
-// GroupDTO.swift
-//
-// Generated by openapi-generator
-// https://openapi-generator.tech
-//
-
-import Foundation
-#if canImport(AnyCodable)
-import AnyCodable
-#endif
-
-public struct GroupDTO: Codable, JSONEncodable, Hashable {
-
-    public var primaryId: UUID
-    public var sportType: SportTypeDTO
-    public var users: [UUID]
-    public var groupEntries: [GroupEntryDTO]
-    public var image: String
-
-    public init(primaryId: UUID, sportType: SportTypeDTO, users: [UUID], groupEntries: [GroupEntryDTO], image: String) {
-        self.primaryId = primaryId
-        self.sportType = sportType
-        self.users = users
-        self.groupEntries = groupEntries
-        self.image = image
-    }
-
-    public enum CodingKeys: String, CodingKey, CaseIterable {
-        case primaryId
-        case sportType
-        case users
-        case groupEntries
-        case image
-    }
-
-    // Encodable protocol methods
-
-    public func encode(to encoder: Encoder) throws {
-        var container = encoder.container(keyedBy: CodingKeys.self)
-        try container.encode(primaryId, forKey: .primaryId)
-        try container.encode(sportType, forKey: .sportType)
-        try container.encode(users, forKey: .users)
-        try container.encode(groupEntries, forKey: .groupEntries)
-        try container.encode(image, forKey: .image)
-    }
-}
-
