# SportBuddy/SportBuddy/App/Resources/Generated/OpenAPIs/Models/GroupEntryDTO.swift
@@ -1,49 +1,0 @@
-//
-// GroupEntryDTO.swift
-//
-// Generated by openapi-generator
-// https://openapi-generator.tech
-//
-
-import Foundation
-#if canImport(AnyCodable)
-import AnyCodable
-#endif
-
-public struct GroupEntryDTO: Codable, JSONEncodable, Hashable {
-
-    public var primaryId: UUID
-    public var message: String
-    /** In epoch seconds */
-    public var timestamp: Int
-    public var sender: UUID
-    public var deleted: Bool
-
-    public init(primaryId: UUID, message: String, timestamp: Int, sender: UUID, deleted: Bool) {
-        self.primaryId = primaryId
-        self.message = message
-        self.timestamp = timestamp
-        self.sender = sender
-        self.deleted = deleted
-    }
-
-    public enum CodingKeys: String, CodingKey, CaseIterable {
-        case primaryId
-        case message
-        case timestamp
-        case sender
-        case deleted
-    }
-
-    // Encodable protocol methods
-
-    public func encode(to encoder: Encoder) throws {
-        var container = encoder.container(keyedBy: CodingKeys.self)
-        try container.encode(primaryId, forKey: .primaryId)
-        try container.encode(message, forKey: .message)
-        try container.encode(timestamp, forKey: .timestamp)
-        try container.encode(sender, forKey: .sender)
-        try container.encode(deleted, forKey: .deleted)
-    }
-}
-
